# Two-Channels-Correlation

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
notebooks/: Two-Channels-Correlation_notebook.ipynb
src/two_channels_correlation/: __init__.py  _two_channels_correlation.py
src/two_channels_correlation/_tests/: test_module.py
