[metadata]
name = Two-Channels-Correlation
version = 0.0.1
description = A correlation between two channels, it is really niche!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GuignardLab/Two-Channels-Correlation
author = Leo Guignard
author_email = leo.guignard@univ-amu.fr
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/GuignardLab/Two-Channels-Correlation/issues
    Documentation = https://github.com/GuignardLab/Two-Channels-Correlation#README.md
    Source Code = https://github.com/GuignardLab/Two-Channels-Correlation
    User Support = https://github.com/GuignardLab/Two-Channels-Correlation/issues

[options]
packages = find:
install_requires =
    numpy
    scipy
    scikit-image
    matplotlib
    tifffile
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
# add your package requirements here
[options.entry_points]
console_scripts =
    2-chan-corr = two_channels_correlation:run_all

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml
